--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-server-micro": "^2.25.0",
+    "graphql": "^15.5.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
