--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.4.4-canary.64",
+    "@prisma/client": "^2.24.0",
     "apollo-server-micro": "^2.25.0",
     "graphql": "^15.5.0",
     "next": "latest",
@@ -17,6 +19,7 @@
   "devDependencies": {
     "autoprefixer": "^10.0.4",
     "postcss": "^8.1.10",
+    "prisma": "^2.24.0",
     "tailwindcss": "^2.1.1"
   }
 }
