--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server-micro": "^2.25.0",
     "graphql": "^15.5.0",
     "next": "latest",
+    "next-auth": "^3.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
