--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://sdas@localhost:5432/tmpdb"
+GITHUB_ID="8bf4d3f5cc47b1e73ee9"
+GITHUB_SECRET="0397b320e4528ad3880a03406ed76f86714fc1de"
+NEXTAUTH_URL="http://localhost:3000"
