--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/node": "^15.12.1",
+    "@types/react": "^17.0.9",
     "autoprefixer": "^10.0.4",
     "postcss": "^8.1.10",
     "prisma": "^2.24.0",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.1.1",
+    "typescript": "^4.3.2"
   }
 }
