--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
     "@next-auth/prisma-adapter": "^0.4.4-canary.64",
     "@prisma/client": "^2.24.0",
     "apollo-server-micro": "^2.25.0",
@@ -18,12 +19,9 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^15.12.1",
-    "@types/react": "^17.0.9",
     "autoprefixer": "^10.0.4",
     "postcss": "^8.1.10",
     "prisma": "^2.24.0",
-    "tailwindcss": "^2.1.1",
-    "typescript": "^4.3.2"
+    "tailwindcss": "^2.1.1"
   }
 }
