--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@apollo/client": "^3.3.20",
     "@next-auth/prisma-adapter": "^0.4.4-canary.64",
     "@prisma/client": "^2.24.0",
+    "@tailwindcss/forms": "^0.3.3",
     "apollo-server-micro": "^2.25.0",
     "graphql": "^15.5.0",
     "next": "latest",
