--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
-    "@next-auth/prisma-adapter": "^0.4.4-canary.64",
-    "@prisma/client": "^2.24.0",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^2.26.0",
     "@tailwindcss/forms": "^0.3.3",
-    "apollo-server-micro": "^2.25.0",
-    "graphql": "^15.5.0",
-    "next": "latest",
-    "next-auth": "^3.25.0",
+    "apollo-server-micro": "^2.25.2",
+    "graphql": "^15.5.1",
+    "next": "11.0.1",
+    "next-auth": "^3.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
-    "postcss": "^8.1.10",
-    "prisma": "^2.24.0",
-    "tailwindcss": "^2.1.1"
+    "postcss": "^8.3.5",
+    "prisma": "^2.26.0",
+    "tailwindcss": "^2.2.4"
   }
 }
