--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@prisma/client": "^2.26.0",
     "@tailwindcss/forms": "^0.3.3",
