--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
-    "@prisma/client": "^2.26.0",
+    "@next-auth/prisma-adapter": "^1.0.1",
+    "@prisma/client": "^3.8.0",
     "@tailwindcss/forms": "^0.3.3",
     "apollo-server-micro": "^2.25.2",
     "graphql": "^15.5.1",
     "next": "11.0.1",
-    "next-auth": "^3.27.1",
+    "next-auth": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
     "postcss": "^8.3.5",
-    "prisma": "^2.26.0",
+    "prisma": "^3.8.0",
     "tailwindcss": "^2.2.4"
   }
 }
